openstack: refactor corrections for labtestcontrol
* pass down in rabbit_user
* keep controller as IP in api-paste.conf
* set standby controller even if dupe

Bug: T171494
Change-Id: I26a66e03d31b868ceca9e1c4d2a5fdc8d9ea378c

--- a/hieradata/common/profile/openstack/base/nova.yaml
+++ b/hieradata/common/profile/openstack/base/nova.yaml
@@ -2,3 +2,4 @@ profile::openstack::base::nova::libvirt_type: 'kvm'
 profile::openstack::base::nova::db_user: 'nova'
 profile::openstack::base::nova::db_name: 'nova'
 profile::openstack::base::nova::compute_dev: '/dev/md1'
+profile::openstack::base::nova::rabbit_user: 'nova'
