--- a/hieradata/codfw/profile/openstack/labtest.yaml
+++ b/hieradata/codfw/profile/openstack/labtest.yaml
@@ -1,7 +1,7 @@
 profile::openstack::labtest::version: 'liberty'
 profile::openstack::labtest::nova_controller: 'labtestcontrol2001.wikimedia.org'
-profile::openstack::labtest::nova_controller_standby: ''
-profile::openstack::labtest::designate_host: 'labtestservices2001.codfw.wmnet'
+profile::openstack::labtest::nova_controller_standby: 'labtestcontrol2001.wikimedia.org'
+profile::openstack::labtest::designate_host: 'labtestservices2001.wikimedia.org'
 profile::openstack::labtest::designate_host_standby: 'labtestservices2001.wikimedia.org'
 profile::openstack::labtest::nova_api_host: 'labtestnet2001.codfw.wmnet'
 profile::openstack::labtest::labs_hosts_range: '10.192.20.0/24'
