--- a/hieradata/codfw/profile/openstack/labtestn.yaml
+++ b/hieradata/codfw/profile/openstack/labtestn.yaml
@@ -6,6 +6,7 @@ profile::openstack::labtestn::designate_host: 'labtestservices2003.wikimedia.org
 profile::openstack::labtestn::designate_host_standby: 'labtestservices2003.wikimedia.org'
 profile::openstack::labtestn::labs_hosts_range: '127.0.0.1/32'
 profile::openstack::labtestn::horizon_host: 'labtestweb2001.wikimedia.org'
+profile::openstack::labtestn::spice_hostname: 'labtestnspice'
 profile::openstack::labtestn::nova_network_host: 'labtestnet2002.codfw.wmnet'
 profile::openstack::labtestn::rabbit_monitor_user: 'monitoring'
 profile::openstack::labtestn::rabbit_file_handles: 8192
