Apply kafka::jumbo::broker on new kafka-jumbo100* hosts
Bug: T167992
Change-Id: I24fde3d997cd1d30460f77514bdaa4ce637e2f7b

--- a/hieradata/role/common/kafka/jumbo/broker.yaml
+++ b/hieradata/role/common/kafka/jumbo/broker.yaml
@@ -2,7 +2,7 @@ cluster: jumbo_kafka
 
 kafka_cluster_name: jumbo
 
-profile::kafka::broker::log_dirs: [/srv/kafka/data] # TBD
+profile::kafka::broker::log_dirs: [/srv/kafka/data]
 profile::kafka::broker::plaintext: true
 # TODO: does not yet work.
 # # ca-manager will use a self signed CA cert to authenticate clients.
