--- a/hieradata/role/common/kafka/jumbo/broker.yaml
+++ b/hieradata/role/common/kafka/jumbo/broker.yaml
@@ -1,6 +1,6 @@
 cluster: jumbo_kafka
 
-kafka_cluster_name: jumbo
+profile::kafka::broker::kafka_cluster_name: jumbo
 
 profile::kafka::broker::log_dirs: [/srv/kafka/data]
 profile::kafka::broker::plaintext: true
