--- a/hieradata/common/monitoring.yaml
+++ b/hieradata/common/monitoring.yaml
@@ -69,6 +69,10 @@ monitoring::groups:
   ganeti_codfw:
     description: Ganeti virt cluster codfw
 
+# Kafka jumbo
+  jumbo_kafka_eqiad:
+    description: Kafka jumbo cluster in eqiad
+
 # Kubernetes
   kubernetes_eqiad:
     description: Kubernetes cluster eqiad
