--- a/hieradata/eqiad/profile/openstack/main/nova/network.yaml
+++ b/hieradata/eqiad/profile/openstack/main/nova/network.yaml
@@ -1,9 +1,9 @@
-profile::openstack::labtestn::nova::network::labs_metal: ['10.64.20.12']
-profile::openstack::labtestn::nova::network::dns_recursor: 'labs-recursor0.wikimedia.org'
-profile::openstack::labtestn::nova::network::dns_recursor_secondary: 'labs-recursor1.wikimedia.org'
+profile::openstack::main::nova::network::labs_metal: ['10.64.20.12']
+profile::openstack::main::nova::network::dns_recursor: 'labs-recursor0.wikimedia.org'
+profile::openstack::main::nova::network::dns_recursor_secondary: 'labs-recursor1.wikimedia.org'
 
 # A wide variety of hosts are reachable via a public web proxy
-profile::openstack::labtestn::nova::network::nova_dnsmasq_aliases:
+profile::openstack::main::nova::network::nova_dnsmasq_aliases:
   deployment-cache-text04:
     'public_ip': '208.80.155.135'
     'private_ip': '10.68.18.103'
