openstack: bare_metal is a hash and set main accordingly
Bug: T171494
Change-Id: Ic97757435c1f7b47eda28c7ba673421580927a8d

--- a/hieradata/eqiad/profile/openstack/main/nova/network.yaml
+++ b/hieradata/eqiad/profile/openstack/main/nova/network.yaml
@@ -1,4 +1,9 @@
-profile::openstack::main::nova::network::labs_metal: ['10.64.20.12']
+profile::openstack::main::nova::network::labs_metal:
+  promethium:
+    'MAC': '90:b1:1c:2d:6f:0c'
+    'IPv4': 10.68.16.2
+    'project': wikitextexp
+
 profile::openstack::main::nova::network::dns_recursor: 'labs-recursor0.wikimedia.org'
 profile::openstack::main::nova::network::dns_recursor_secondary: 'labs-recursor1.wikimedia.org'
 
