openstack: preserve limiting SSH listen IP for nova network host
Bug: T171494
Change-Id: Icfeaa72e699a59fb9bb3a9c7f5e872295d0060ab

--- a/hieradata/role/eqiad/wmcs/openstack/main/net.yaml
+++ b/hieradata/role/eqiad/wmcs/openstack/main/net.yaml
@@ -7,3 +7,8 @@ openstack::log_group: labnet-users
 debdeploy::grains:
   debdeploy-nova-api:
     value: standard
+
+# routing and nat host with lots of addresses
+# lock down SSH to administrative IP only
+profile::base::ssh_server_settings:
+  listen_address: "%{::ipaddress}"
