--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -294,6 +294,9 @@ eqiad:
     logstash1001.eqiad.wmnet: [kibana, logstash, logstash-log4j, logstash-gelf, logstash-json, logstash-syslog, logstash-udp2log]
     logstash1002.eqiad.wmnet: [kibana, logstash, logstash-log4j, logstash-gelf, logstash-json, logstash-syslog, logstash-udp2log]
     logstash1003.eqiad.wmnet: [kibana, logstash, logstash-log4j, logstash-gelf, logstash-json, logstash-syslog, logstash-udp2log]
+    logstash1007.eqiad.wmnet: [kibana, logstash, logstash-log4j, logstash-gelf, logstash-json, logstash-syslog, logstash-udp2log]
+    logstash1008.eqiad.wmnet: [kibana, logstash, logstash-log4j, logstash-gelf, logstash-json, logstash-syslog, logstash-udp2log]
+    logstash1009.eqiad.wmnet: [kibana, logstash, logstash-log4j, logstash-gelf, logstash-json, logstash-syslog, logstash-udp2log]
   kubernetes:
     argon.eqiad.wmnet: [kubemaster]
     chlorine.eqiad.wmnet: [kubemaster]
