jobrunner: add discovery data
Bug: T174599
Change-Id: I0db2528ba95ab7cf509f8178e8ff3fe34c7cb09d

--- a/conftool-data/discovery/mediawiki.yaml
+++ b/conftool-data/discovery/mediawiki.yaml
@@ -7,3 +7,4 @@ imagescaler-ro: [eqiad, codfw]
 swift-rw: [eqiad, codfw]
 swift-ro: [eqiad, codfw]
 thumbor: [eqiad, codfw]
+jobrunner: [eqiad, codfw]
