prometheus: add aggregation rules for IPVS
Change-Id: Ide723e69fa4b98b85000f8cdccb85262e23ca811

--- a/modules/role/files/prometheus/rules_ops.conf
+++ b/modules/role/files/prometheus/rules_ops.conf
@@ -168,3 +168,8 @@ instance_row:infeedVoltage:min = min by (instance, row) (infeedVoltage)
 instance_row:infeedCapacityUsed:avg = avg by (instance, row) (infeedLoadValue / infeedCapacity)
 instance_row:infeedLoadValue:max = max by (instance, row) (infeedLoadValue)
 instance_row:infeedLoadValue:min = min by (instance, row) (infeedLoadValue)
+
+# IPVS aggregation
+instance:node_ipvs_backend_connections_active:rate5m = sum by (instance) (rate(node_ipvs_backend_connections_active[5m]))
+local_port_local_address:node_ipvs_backend_connections_active:rate5m = sum by (local_port,local_address) (rate(node_ipvs_backend_connections_active[5m]))
+local_port_local_address:node_ipvs_backend_connections_inactive:rate5m = sum by (local_port,local_address) (rate(node_ipvs_backend_connections_inactive[5m]))
