Add the cp-jobqueue profile
Bug: T175281
Change-Id: I78a09d0d99ae20a38d397da8f8a1faf9dd015fe3

--- a/hieradata/role/common/deployment_server.yaml
+++ b/hieradata/role/common/deployment_server.yaml
@@ -91,6 +91,7 @@ scap::sources:
 #    lvs_service: changeprop
   citoid/deploy: {}
 #    lvs_service: citoid
+  cp-jobqueue: {}
   cxserver/deploy: {}
 #    lvs_service: cxserver
   dumps/dumps:
