--- a/hieradata/role/common/scb.yaml
+++ b/hieradata/role/common/scb.yaml
@@ -91,3 +91,7 @@ profile::nutcracker::monitor_port: 0 # we have nothing exposed via tcp
 
 # Recommendation API
 profile::recommendation_api::wdqs_uri: "http://wdqs.discovery.wmnet"
+
+# ChangePropagation for JobQueue
+profile::cpjobqueue::redis_path: "/var/run/nutcracker/redis_%{::site}.sock"
+profile::cpjobqueue::jobrunner_host: https://jobrunner.discovery.wmnet
