ChangeProp-JobQueue: Fix the repo location and name
Bug: T175281
Change-Id: I029f8b52e51277dcbde341f1ea1289465f1a9a55

--- a/hieradata/role/common/deployment_server.yaml
+++ b/hieradata/role/common/deployment_server.yaml
@@ -91,7 +91,9 @@ scap::sources:
 #    lvs_service: changeprop
   citoid/deploy: {}
 #    lvs_service: citoid
-  cp-jobqueue: {}
+  cpjobqueue/deploy: {
+    repository: mediawiki/services/change-propagation/jobqueue-deploy
+  }
   cxserver/deploy: {}
 #    lvs_service: cxserver
   dumps/dumps:
