--- a/hieradata/role/common/scb.yaml
+++ b/hieradata/role/common/scb.yaml
@@ -95,3 +95,6 @@ profile::recommendation_api::wdqs_uri: "http://wdqs.discovery.wmnet"
 # ChangePropagation for JobQueue
 profile::cpjobqueue::redis_path: "/var/run/nutcracker/redis_%{::site}.sock"
 profile::cpjobqueue::jobrunner_host: https://jobrunner.discovery.wmnet
+
+#CXserver
+profile::cxserver::apertium_uri: "http://apertium.svc.%{::site}.wmnet:2737"
