admins: add rho to analytics-privatedata-users
follow-up to Ia90b710d67251e2

Adds user rho (Rita Ho) to analytics-privatedata-users

purpose: review analytics data for the Wikipedia
Android app from SWAP notebooks

Per https://wikitech.wikimedia.org/wiki/SWAP#Access one
of the groups analytics-privatedata-users, statistics-privatedata-users
or researchers is needed for the requested access.

The request was specifically for analytics-privatedata-users.
What the difference is can be seen here:

https://wikitech.wikimedia.org/wiki/Analytics/Data_access#Access_Groups

This specific group is needed for Hive access to query private data.

Bug: T175204
Change-Id: I3788631dbaa460a2b750a3a6a869e7b2216f89f4

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -192,7 +192,7 @@ groups:
               leila, nettrom, mforns, bmansurov, tbayer, joal,
               madhuvishy, tjones, legoktm, dcausse, bearloga, dpatrick, atgomez, dstrine,
               joewalsh, marktraceur, mtizzoni, panisson, paolotti, ciro, melodykramer,
-              fdans, shiladsen]
+              fdans, shiladsen, rho]
   statistics-users:
     gid: 726
     description: Access statistics number crunching hosts. NO PRIVS.
