restructure dumps webserver, zim manifests to module/role/profile
Other dumps-related manifests will get moved into the dumps module
and profile directories later.

Change-Id: I87da750a869061774156bde2997fce0f1908baf6

--- a/modules/dumps/files/web/logrotate.conf
+++ b/modules/dumps/files/web/logrotate.conf
@@ -1,5 +1,6 @@
 # logrotate config for datasets web logs
 # This file is managed by Puppet
+# modules/dumps/files/web/logrotate.conf
 
 /var/log/nginx/*.log
 {
