restructure dumps webserver, zim manifests to module/role/profile
We don't serve zim dumps via a special setup any more, so rename
that stuff to reflect what it does, i.e. serve html dumps.

Other dumps-related manifests will get moved into the dumps module
and profile directories later.

Change-Id: I87da750a869061774156bde2997fce0f1908baf6

--- a/modules/dumps/files/web/logrotate.htmldumps.conf
+++ b/modules/dumps/files/web/logrotate.htmldumps.conf
@@ -1,5 +1,6 @@
-# logrotate config for datasets web logs
+# logrotate config for web logs for html dumps server
 # This file is managed by Puppet
+# modules/dumps/files/web/logrotate.htmldumps.conf
 
 /var/log/nginx/*.log
 {
