--- a/modules/dumps/files/web/nginx.htmldumps.conf
+++ b/modules/dumps/files/web/nginx.htmldumps.conf
@@ -1,3 +1,8 @@
+##################################
+# this file is managed by puppet!
+# modules/dumps/files/web/nginx.zim.conf
+##################################
+
 limit_conn_zone $binary_remote_addr zone=addr:10m;
 
 server {
