admins: add Kai Nissen (knissen) to LDAP (nda) users
Kai Nissen now has an NDA on file with legal, confirmed
on Google doc. He will be added to the LDAP group "nda" for
access to pivot.

Bug: T168046
Change-Id: Ice27ea96603f33051ec795933aaa98a605523fb1

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2629,6 +2629,10 @@ ldap_only_users:
     ensure: present
     realname: Jessica Robell
     email: jrobell@wikimedia.org
+  knissen:
+    ensure: present
+    realname: Kai Nissen
+    email: kai.nissen@wikimedia.de
   kemayo:
     ensure: present
     realname: David Lynch
