openstack: designate as module/profile/role
Bug: T171494
Change-Id: Ib66fdb449af65f8c3608a6d225ee80976f4acd7d

--- a/hieradata/codfw/profile/openstack/labtestn/designate.yaml
+++ b/hieradata/codfw/profile/openstack/labtestn/designate.yaml
@@ -1,1 +1,4 @@
 profile::openstack::labtestn::designate::wmflabsdotorg_project: 'wmflabsdotorg'
+profile::openstack::labtestn::designate::db_host: 'labtestcontrol2003.wikimedia.org'
+profile::openstack::labtestn::designate::domain_id_internal_forward: 'e1ac328c-b932-43f2-b12f-407fb9477925'
+profile::openstack::labtestn::designate::domain_id_internal_reverse: '9b60f3ab-d64b-4e30-9d6f-7535811b0fa8'
