--- a/hieradata/codfw/profile/openstack/labtestn.yaml
+++ b/hieradata/codfw/profile/openstack/labtestn.yaml
@@ -2,8 +2,9 @@ profile::openstack::labtestn::version: 'liberty'
 profile::openstack::labtestn::nova_controller: 'labtestcontrol2003.wikimedia.org'
 profile::openstack::labtestn::nova_controller_standby: 'labtestcontrol2003.wikimedia.org'
 profile::openstack::labtestn::nova_api_host: 'labtestcontrol2003.wikimedia.org'
-profile::openstack::labtestn::designate_host: 'labtestservices2003.wikimedia.org'
+profile::openstack::labtestn::designate_host: 'labtestcontrol2003.wikimedia.org'
 profile::openstack::labtestn::designate_host_standby: 'labtestservices2003.wikimedia.org'
+profile::openstack::labtestn::puppetmaster_hostname: 'labtestpuppetmaster2001.wikimedia.org'
 profile::openstack::labtestn::labs_hosts_range: '127.0.0.1/32'
 profile::openstack::labtestn::horizon_host: 'labtestweb2001.wikimedia.org'
 profile::openstack::labtestn::spice_hostname: 'labtestnspice.wikimedia.org'
