--- a/hieradata/eqiad/profile/openstack/main.yaml
+++ b/hieradata/eqiad/profile/openstack/main.yaml
@@ -5,6 +5,7 @@ profile::openstack::main::nova_api_host: 'labnet1001.eqiad.wmnet'
 profile::openstack::main::nova_network_host: 'labnet1001.eqiad.wmnet'
 profile::openstack::main::designate_host: 'labservices1001.wikimedia.org'
 profile::openstack::main::designate_host_standby: 'labservices1002.wikimedia.org'
+profile::openstack::main::puppetmaster_hostname: 'labs-puppetmaster.wikimedia.org'
 profile::openstack::main::horizon_host: 'californium.wikimedia.org'
 profile::openstack::main::spice_hostname: 'labspice.wikimedia.org'
 profile::openstack::main::labs_hosts_range: '10.64.20.0/24'
