eventstreams: convert to role/profile
Change-Id: I94dad66103ce344a04b85a581203ecc5540052d0

--- a/hieradata/labs/deployment-prep/common.yaml
+++ b/hieradata/labs/deployment-prep/common.yaml
@@ -341,3 +341,14 @@ scap::sources:
 prometheus_nodes:
   - deployment-prometheus01.deployment-prep.eqiad.wmflabs
 profile::recommendation_api::wdqs_uri: http://wdqs-test.wmflabs.org
+
+# Eventstreams config
+profile::eventstreams::kafka_cluster_name: main
+profile::eventstreams::streams:
+  test:
+    topics: ["%{::site}.test.event"]
+  revision-create:
+    topics: ["%{::site}.mediawiki.revision-create"]
+  recentchange:
+    topics: ["%{::site}.mediawiki.recentchange"]
+profile::eventstreams::rdkafka_config: {}
