Stop installing debdeploy-minion for new WMCS VPS instances
debdeploy-minion is the package name used by the Salt-based debdeploy,
the new cumin-based client is called debdeploy-client.

I'm not sure if debdeploy is currently used in WMCS, though?
unattended-upgrades is likely doing all the updates, now? OTOH it
doesn't hurt to have it available in case it turns out to be needed
again at some point.

Change-Id: Ib9534e0d56304c773c2574c76cee808569ccc898

--- a/modules/labs_bootstrapvz/files/labs-jessie.manifest.yaml
+++ b/modules/labs_bootstrapvz/files/labs-jessie.manifest.yaml
@@ -97,7 +97,7 @@ packages:
     - tree
     - nagios-plugins-basic
     - jq
-    - debdeploy-minion
+    - debdeploy-client
     - apt-transport-https
     - tcpdump
     - molly-guard
