--- a/modules/labs_bootstrapvz/files/labs-stretch.manifest.yaml
+++ b/modules/labs_bootstrapvz/files/labs-stretch.manifest.yaml
@@ -40,7 +40,7 @@ packages:
     - command-not-found
     - coreutils
     - curl
-    - debdeploy-minion
+    - debdeploy-client
     - debian-goodies
     - diamond
     - dnsutils
