changeprop: convert to role/profile
Change-Id: I191a4f46aaffa13bca21bfbb3a00292ef10f46b1

--- a/hieradata/role/common/scb.yaml
+++ b/hieradata/role/common/scb.yaml
@@ -89,7 +89,13 @@ profile::eventstreams::rdkafka_config:
   broker.version.fallback: '0.9.0.1'
 ### END EVENTSTREAMS ###
 
-changeprop::restbase_uri: http://restbase-async.discovery.wmnet:7231
+### BEGIN CHANGEPROP ###
+profile::changeprop::restbase_uri: http://restbase-async.discovery.wmnet:7231
+profile::changeprop::purge_host: 239.128.0.112
+profile::changeprop::purge_port: 4827
+profile::changeprop::ores_uris:
+  - http://ores.svc.eqiad.wmnet:8081
+  - http://ores.svc.codfw.wmnet:8081
 profile::nutcracker::memcached_pools: {}
 profile::nutcracker::monitor_port: 0 # we have nothing exposed via tcp
 
