--- a/hieradata/labs/deployment-prep/common.yaml
+++ b/hieradata/labs/deployment-prep/common.yaml
@@ -16,10 +16,10 @@ service::configuration::statsd_host: labmon1001.eqiad.wmnet
 service::configuration::logstash_host: deployment-logstash2.deployment-prep.eqiad.wmflabs
 citoid::zotero_host: deployment-zotero01.deployment-prep.eqiad.wmflabs
 citoid::zotero_port: 1969
-changeprop::purge_host: deployment-cache-text04.deployment-prep.eqiad.wmflabs
-changeprop::ores_uris: ['http://deployment-sca03.deployment-prep.eqiad.wmflabs:8081']
-# Need to redefine RESTBase URI as Change-Prop redefines it in order to provide a different value for async updates
-changeprop::restbase_uri: http://deployment-restbase02.deployment-prep.eqiad.wmflabs:7231
+profile::changeprop::purge_host: deployment-cache-text04.deployment-prep.eqiad.wmflabs
+profile::changeprop::ores_uris: ['http://deployment-sca03.deployment-prep.eqiad.wmflabs:8081']
+profile::changeprop::restbase_uri: http://deployment-restbase02.deployment-prep.eqiad.wmflabs:7231
+profile::changeprop::purge_port: 4827
 # Used to sync the setting between all Kafka clusters and clients.
 kafka_message_max_bytes: 4194304
 graphoid::allowed_domains:
