--- a/hieradata/role/common/scb.yaml
+++ b/hieradata/role/common/scb.yaml
@@ -26,7 +26,9 @@ role::lvs::realserver::pools:
   pdfrender: {}
   trendingedits: {}
   "recommendation-api": {}
-graphoid::allowed_domains:
+
+### BEGIN GRAPHOID
+profile::graphoid::allowed_domains:
   https:
     - mediawiki.org
     - wikibooks.org
@@ -46,10 +48,12 @@ graphoid::allowed_domains:
     - query.wikidata.org
   geoshape:
     - maps.wikimedia.org
-graphoid::headers:
+profile::graphoid::headers:
   'Cache-Control': 'public, s-maxage=3600, max-age=3600'
-graphoid::error_headers:
+profile::graphoid::error_headers:
   'Cache-Control': 'public, s-maxage=300, max-age=300'
+### END GRAPHOID ###
+
 citoid::zotero_port: 1969
 citoid::zotero_host: "zotero.svc.%{::site}.wmnet"
 profile::ores::web::redis_host: "oresrdb.svc.%{::site}.wmnet"
@@ -96,6 +100,7 @@ profile::changeprop::purge_port: 4827
 profile::changeprop::ores_uris:
   - http://ores.svc.eqiad.wmnet:8081
   - http://ores.svc.codfw.wmnet:8081
+### END CHANGEPROP ###
 profile::nutcracker::memcached_pools: {}
 profile::nutcracker::monitor_port: 0 # we have nothing exposed via tcp
 
