CP-JobQueue: Add the service to SCB
Bug: T175281
Change-Id: I1ebdb7eb4964e0ecb57c050ce46876bb8e72a1c7

--- a/hieradata/role/common/scb.yaml
+++ b/hieradata/role/common/scb.yaml
@@ -3,6 +3,7 @@ admin::groups:
   - sc-admins
   - citoid-admin
   - citoid-users
+  - cpjobqueue-admin
   - cxserver-admin
   - apertium-admins
   - graphoid-admin
