--- a/hieradata/role/codfw/thumbor/mediawiki.yaml
+++ b/hieradata/role/codfw/thumbor/mediawiki.yaml
@@ -16,3 +16,6 @@ thumbor_memcached_servers_nutcracker:
   - '10.192.16.59:11211:1 "shard04"' # thumbor2004
 
 thumbor::poolcounter_server: 'poolcounter2001.codfw.wmnet'
+
+thumbor::logstash_host: 'logstash.svc.eqiad.wmnet'
+thumbor::logstash_port: 11514
