Add NUMA meminfo stats for cache+lvs nodes
Bug: T175636
Change-Id: I045da8a3a102d48d58322e57c7267ffd959fd4c6

--- a/hieradata/role/common/lvs/balancer.yaml
+++ b/hieradata/role/common/lvs/balancer.yaml
@@ -4,5 +4,6 @@ profile::base::ssh_server_settings:
   listen_address: "%{::ipaddress}"
 prometheus::node_exporter::collectors_extra:
   - ipvs
+  - meminfo_numa
 profile::pybal::config_source: etcd
 profile::pybal::bgp: "yes"
