nagios_common: use the template if empty($content)
We currently use a stock template if $content is undef, but $content is
set to secret('nagios/contacts.cfg') in the role class, which may return
'' in a test environment and seems to vary between current and future
parser. Change the if to vary on $content being empty() as well.

Change-Id: I5fc26b00f2314bc27fb2d1ba7110ba1040439ef1

--- a/modules/monitoring/.fixtures.yml
+++ b/modules/monitoring/.fixtures.yml
@@ -6,3 +6,4 @@ fixtures:
         wmflib: "../../../../wmflib"
         logrotate: "../../../../logrotate"
         elasticsearch: "../../../../elasticsearch"
+        stdlib: "../../../../stdlib"
