Remove access to analytics posix groups for users not needing them.
Bug: T170878
Change-Id: I6c0bb918d8c1fc2cfa4270c8c0963da5736bdfb9

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -116,7 +116,7 @@ groups:
               nuria, ori, otto, yuvipanda,
               mforns, jdlrobson, dr0ptp4kt, tgr, marktraceur, jhernandez, joal,
               daisy, mholloway-shell, madhuvishy, ebernhardson, niedzielski,
-              neilpquinn-wmf, tbayer, moushira, dbrant, maxsem,
+              neilpquinn-wmf, tbayer, dbrant, maxsem,
               jminor, etonkovidova, sbisson, addshore, matmarex, elukey,
               nikerabbit, nschaaf, dstrine, joewalsh, mpany, jsamra,
               jdittrich, chelsyx, ovasileva, mtizzoni, panisson, paolotti, ciro, debt,
@@ -237,7 +237,7 @@ groups:
               nuria, otto, deskana, zhousquared, arnad, jgonsior,
               bsitzmann, dbrant, nettrom, leila,
               ezachte, mforns, reedy, west1, phuedx, awight,
-              joal, jamesur, akosiaris, lpintscher, jkatz, madhuvishy, gpaumier,
+              joal, jamesur, akosiaris, jkatz, madhuvishy,
               andyrussg, niedzielski, maxsem, hoo, daniel, tbayer, krinkle, tgr,
               smalyshev, ebernhardson, addshore, jminor, chedasaurus, neilpquinn-wmf,
               dcausse, bd808, tjones, mobrovac, jdrewniak, ejegg, jdcc, ori,
