Stopping event collection for Page events
These page events are available in mediawiki history and
EventBus

Bug: T171629
Change-Id: Ib38c63f81dce57b3921a5ff864e84b5b3e395106

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -321,7 +321,8 @@ dumps_clients_snapshots:
 #   * Analytics so we can use it for testing throughput
 #   * CentralNoticeBannerHistory because it can't be inserted into mysql with its array property
 #   * ImageMetrics see T141407, these tables are no longer used and yet some cached code is still sending events
-eventlogging_valid_mixed_schema_blacklist: ^(Analytics|CentralNoticeBannerHistory|ImageMetricsLoadingTime|ImageMetricsCorsSupport)$
+#   * PageCreation see T171629, data is available in several other ways
+eventlogging_valid_mixed_schema_blacklist: ^(Analytics|CentralNoticeBannerHistory|ImageMetricsLoadingTime|ImageMetricsCorsSupport|PageCreation)$
 # Used to specify writer handler for eventlogging processor producer.
 eventlogging_kafka_producer_scheme: "kafka-confluent://"
 
