hhvm: use '', not undef for light_process_file_prefix
Otherwise it is interpolated as
  hhvm.server.light_process_file_prefix = undef
with the future parser on the deployment servers.

Change-Id: I985129e3c959dfde4b8b449141ba8c7eaf833bdf

--- a/hieradata/role/common/deployment_server.yaml
+++ b/hieradata/role/common/deployment_server.yaml
@@ -27,12 +27,12 @@ hhvm::extra::fcgi:
   hhvm:
     server:
       light_process_count: 0
-      light_process_file_prefix:
+      light_process_file_prefix: ''
 hhvm::extra::cli:
   hhvm:
     server:
       light_process_count: 0
-      light_process_file_prefix:
+      light_process_file_prefix: ''
 # Default scap::server configuration.  This is used in production.
 # If you are setting up scap::server in labs, these will be used
 # unless you override them for your labs project.
