--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -335,6 +335,7 @@ labs_nova_api_host: &labsnovaapihost "labnet1001.eqiad.wmnet"
 labs_nova_network_host: &labsnovanetworkhost "labnet1001"
 labs_nova_network_ip: &labsnovanetworkip "10.64.20.25"
 status_wiki_host_master: 'wikitech.wikimedia.org'
+profile::openstack::main::cumin_auth_group: cumin_masters
 
 # By default, don't allow projects to allocate public IPs; this way we can
 # let users have network admin rights, for firewall rules and such, and can
@@ -525,4 +526,3 @@ udp2log_aggregator: "udplog:8420"
 
 tcpircbot_host: 'icinga.wikimedia.org'
 tcpircbot_port: 9200
-
