--- a/hieradata/eqiad.yaml
+++ b/hieradata/eqiad.yaml
@@ -68,6 +68,7 @@ labs_certmanager_hostname: "labservices1001.wikimedia.org"
 # Labs
 #
 
+profile::openstack::main::cumin_auth_group: bastion_restricted_hosts
 labs_nova_controller: &labsnovacontroller "labcontrol1001.wikimedia.org"
 # _spare is a duplicate/backup controller.  In theory it has the
 #  same state as the main controller.
