thumbor: send errors to logstash in beta too
Bug: T150734
Change-Id: If423193c13cd80f5d47fa8595200c4bc28d62383

--- a/hieradata/labs/deployment-prep/common.yaml
+++ b/hieradata/labs/deployment-prep/common.yaml
@@ -361,3 +361,6 @@ profile::eventstreams::streams:
   recentchange:
     topics: ["%{::site}.mediawiki.recentchange"]
 profile::eventstreams::rdkafka_config: {}
+
+thumbor::logstash_host: 'deployment-logstash2.deployment-prep.eqiad.wmflabs'
+thumbor::logstash_port: 11514
