--- a/modules/dumps/files/web/htmldumps/nginx.conf
+++ b/modules/dumps/files/web/htmldumps/nginx.conf
@@ -1,3 +1,8 @@
+##############################
+# This file is maintained by puppet!
+# modules/dumps/files/web/htmldumps/nginx.conf
+##############################
+
 limit_conn_zone $binary_remote_addr zone=addr:10m;
 
 server {
