--- a/hieradata/role/common/dumps/web.yaml
+++ b/hieradata/role/common/dumps/web.yaml
@@ -1,4 +1,4 @@
-dumps::rsync_clients:
+role::dumps::web::rsync_clients:
   - dataset1001.wikimedia.org
   - mwlog1001.eqiad.wmnet
   - mwlog2001.codfw.wmnet
@@ -20,6 +20,6 @@ dumps::rsync_clients:
   - wikimedia.iconic.vi
   - poincare.acc.umu.se
   - wikimedia.bytemark.co.uk
-dumps::rsync_clients_ipv6:
+role::dumps::web::rsync_clients_ipv6:
   - odysseus.ip6.fi.muni.cz
   - poincare.acc.umu.se
