[WIP] role::kafka::jumbo::broker: enable Prometheus JMX monitoring
This change follows what it has been done for Cassandra so far,
namely adding a special java agent among its jvm ops able to
export JMX metrics.

Ref: https://github.com/prometheus/jmx_exporter

Bug: T167992
Change-Id: Icb26d40cf4f9b6661d3560f314e073df075d3c1f

--- a/hieradata/role/common/kafka/jumbo/broker.yaml
+++ b/hieradata/role/common/kafka/jumbo/broker.yaml
@@ -2,6 +2,10 @@ cluster: jumbo_kafka
 
 profile::kafka::broker::kafka_cluster_name: jumbo
 
+# Enable the Prometheus JMX Exporter
+profile::kafka::broker::jmx_exporter_enabled: true
+profile::kafka::broker::jmx_exporter_jar_version: 0.8-20170117.190412-1
+
 profile::kafka::broker::log_dirs: [/srv/kafka/data]
 profile::kafka::broker::plaintext: true
 # TODO: does not yet work.
