--- a/hieradata/role/common/logstash/collector.yaml
+++ b/hieradata/role/common/logstash/collector.yaml
@@ -38,6 +38,9 @@ logstash::cluster_hosts:
   - logstash1004.eqiad.wmnet
   - logstash1005.eqiad.wmnet
   - logstash1006.eqiad.wmnet
+  - logstash1007.eqiad.wmnet
+  - logstash1008.eqiad.wmnet
+  - logstash1009.eqiad.wmnet
 
 role::logstash::collector::statsd_host: statsd.eqiad.wmnet
 
