--- a/hieradata/role/common/logstash/elasticsearch.yaml
+++ b/hieradata/role/common/logstash/elasticsearch.yaml
@@ -25,4 +25,7 @@ logstash::cluster_hosts:
   - logstash1004.eqiad.wmnet
   - logstash1005.eqiad.wmnet
   - logstash1006.eqiad.wmnet
+  - logstash1007.eqiad.wmnet
+  - logstash1008.eqiad.wmnet
+  - logstash1009.eqiad.wmnet
 elasticsearch::data_dir: '/var/lib/elasticsearch'
