--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -7,6 +7,8 @@ eqiad:
     mw1169.eqiad.wmnet: [apache2]
     mw1259.eqiad.wmnet: [apache2]
     mw1260.eqiad.wmnet: [apache2]
+    mw1307.eqiad.wmnet: [apache2]
+    mw1318.eqiad.wmnet: [apache2]
   jobrunner:
     mw1161.eqiad.wmnet: [apache2,nginx]
     mw1162.eqiad.wmnet: [apache2,nginx]
@@ -23,6 +25,10 @@ eqiad:
     mw1304.eqiad.wmnet: [apache2,nginx]
     mw1305.eqiad.wmnet: [apache2,nginx]
     mw1306.eqiad.wmnet: [apache2,nginx]
+    mw1308.eqiad.wmnet: [apache2,nginx]
+    mw1309.eqiad.wmnet: [apache2,nginx]
+    mw1310.eqiad.wmnet: [apache2,nginx]
+    mw1311.eqiad.wmnet: [apache2,nginx]
   api_appserver:
     mw1189.eqiad.wmnet: [apache2,nginx]
     mw1190.eqiad.wmnet: [apache2,nginx]
@@ -73,6 +79,12 @@ eqiad:
     mw1288.eqiad.wmnet: [apache2,nginx]
     mw1289.eqiad.wmnet: [apache2,nginx]
     mw1290.eqiad.wmnet: [apache2,nginx]
+    mw1312.eqiad.wmnet: [apache2,nginx]
+    mw1313.eqiad.wmnet: [apache2,nginx]
+    mw1314.eqiad.wmnet: [apache2,nginx]
+    mw1315.eqiad.wmnet: [apache2,nginx]
+    mw1316.eqiad.wmnet: [apache2,nginx]
+    mw1317.eqiad.wmnet: [apache2,nginx]
   appserver:
     mw1180.eqiad.wmnet: [apache2,nginx]
     mw1181.eqiad.wmnet: [apache2,nginx]
@@ -130,6 +142,16 @@ eqiad:
     mw1273.eqiad.wmnet: [apache2,nginx]
     mw1274.eqiad.wmnet: [apache2,nginx]
     mw1275.eqiad.wmnet: [apache2,nginx]
+    mw1319.eqiad.wmnet: [apache2,nginx]
+    mw1320.eqiad.wmnet: [apache2,nginx]
+    mw1321.eqiad.wmnet: [apache2,nginx]
+    mw1322.eqiad.wmnet: [apache2,nginx]
+    mw1323.eqiad.wmnet: [apache2,nginx]
+    mw1324.eqiad.wmnet: [apache2,nginx]
+    mw1325.eqiad.wmnet: [apache2,nginx]
+    mw1326.eqiad.wmnet: [apache2,nginx]
+    mw1327.eqiad.wmnet: [apache2,nginx]
+    mw1328.eqiad.wmnet: [apache2,nginx]
   cache_text:
     cp1052.eqiad.wmnet: [varnish-fe, varnish-be, nginx]
     cp1053.eqiad.wmnet: [varnish-fe, varnish-be, nginx]
