Increase druid broker query cache size to 2G
This maywq help with wikistats query caching

Change-Id: I0743a7a350d9a98cb6c1e09720a9d4052b0cdd0e

--- a/hieradata/eqiad/druid/broker.yaml
+++ b/hieradata/eqiad/druid/broker.yaml
@@ -4,7 +4,9 @@ druid::broker::properties:
   druid.server.http.numThreads: 20
   druid.broker.http.numConnections: 20
   druid.broker.http.readTimeout: PT5M
-
+  # Increase druid broker query cache size to 2G.
+  # TBD: Perhaps we should also try using memcached?
+  druid.cache.sizeInBytes: 2147483648
 druid::broker::env:
   DRUID_HEAP_OPTS: "-Xmx25g -Xms25g"
   DRUID_EXTRA_JVM_OPTS: "-XX:NewSize=6g -XX:MaxNewSize=6g -XX:MaxDirectMemorySize=64g -XX:+UseConcMarkSweepGC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
