icinga: initial whitelist for screen monitoring
For upcoming monitoring of long-running screen sessions,
start whitelisting hosts where screens are expected and
there should not be any alerts.

In the original ticket it is already requested that terbium
and copper specifically are excluded.

But instead of doing it by hostname we should do it based on roles.

Based on mailing a few users using multiple screens, for
round 1 i came up with these roles to whitelist:

package building hosts (copper)

puppet masters (only frontend)

mariadb::core and all other mariadb::* roles (db*)

restbase-dev and restbase-test cluster (but not regular prod)

labtest* (various wmcs::openstack::labtest and ..::labtestn)

This is to be merged before we
enable the monitoring by default again and
is WIP, to be extended.

Bug: T165348
Change-Id: I8fc231cbcf2f607170467f9c99fd5cbf1a47c447

--- a/hieradata/role/common/builder.yaml
+++ b/hieradata/role/common/builder.yaml
@@ -6,3 +6,4 @@ profile::docker::engine::settings:
 profile::docker::storage::loopback::source_dir: "/srv/docker-dm"
 profile::docker::builder::proxy_address: "webproxy.%{::site}.wmnet"
 profile::docker::builder::proxy_port: "8080"
+monitor_screens: false
