--- a/hieradata/role/common/restbase/test_cluster.yaml
+++ b/hieradata/role/common/restbase/test_cluster.yaml
@@ -129,6 +129,8 @@ profile::cassandra::settings:
 
 service::configuration::log_dir: "/var/log"
 
+monitor_screens: false
+
 admin::groups:
   - restbase-roots
   - restbase-admins
