--- a/hieradata/role/common/puppetmaster/frontend.yaml
+++ b/hieradata/role/common/puppetmaster/frontend.yaml
@@ -17,3 +17,4 @@ profile::discovery::path: "/srv/config-master/discovery"
 profile::discovery::watch_interval: 60
 profile::puppetmaster::common::directory_environments: true
 profile::puppetmaster::common::storeconfigs: puppetdb
+monitor_screens: false
