icinga: initial whitelist for screen monitoring
For upcoming monitoring of long-running screen sessions,
start whitelisting hosts where screens are expected and
there should not be any alerts.

In the original ticket it is already requested that terbium
and copper specifically are excluded.

But instead of doing it by hostname we should do it based on roles.

Based on mailing a few users using multiple screens, for
round 1 i came up with these roles to whitelist:

package building hosts (copper)

mediawiki maintenance servers  (terbium/wasat)

salt masters (neodymium)

puppet masters (frond and backend)

analytics_cluster::client (stat1004, notebook)

mariadb::core and all other mariadb::* roles (db*)

This is to be merged before we
enable the monitoring by default again and
is WIP, to be extended.

Bug: T165348
Change-Id: I8fc231cbcf2f607170467f9c99fd5cbf1a47c447

--- a/hieradata/role/common/analytics_cluster/client.yaml
+++ b/hieradata/role/common/analytics_cluster/client.yaml
@@ -6,3 +6,4 @@ profile::hadoop::client::resourcemanager_hosts:
 profile::hive::client::zookeeper_cluster_name: main-eqiad
 profile::hive::client::server_host: analytics1003.eqiad.wmnet
 profile::hive::client::server_port: 10000
+monitor_screens: false
