--- a/hieradata/role/common/mediawiki_maintenance.yaml
+++ b/hieradata/role/common/mediawiki_maintenance.yaml
@@ -17,3 +17,5 @@ hhvm::extra::cli:
       read_timeout: 86400000
 nutcracker::verbosity: "4"
 profile::mariadb::maintenance::ensure: present
+monitor_screens: false
+
