bootstrap-vz: prevent puppet-agent from starting
This is similar to the fix for T172064, which was
trusty-specific.  With luck this change
will clean up our first boot lots a bit.

Change-Id: I9f752a74271f3352e33780046ff358a9afe8f039

--- a/modules/labs_bootstrapvz/files/labs-jessie.manifest.yaml
+++ b/modules/labs_bootstrapvz/files/labs-jessie.manifest.yaml
@@ -195,6 +195,7 @@ plugins:
       - ['cp', '/etc/default/grub', '{root}/etc/default/grub']
       - ['chroot', '{root}', 'update-grub']
       - ['chroot', '{root}', 'puppet', 'agent', '--disable']
+      - ['chroot', '{root}', 'update-rc.d', '-f', 'puppet', 'remove']
 
   unattended_upgrades:
     update_interval: 1
