Deploy discovery-analytics with scap3
Bug: T129149
Depends-On: Icd80f28ee1a950cea72ec7b00e639526fe9bb846
Change-Id: I2284aa559a6f5bddbd2c7277539eb7869acdd3f3

--- a/hieradata/common/scap/dsh.yaml
+++ b/hieradata/common/scap/dsh.yaml
@@ -78,6 +78,9 @@ scap::dsh::groups:
       - restbase-test2002.codfw.wmnet
       - restbase-test2003.codfw.wmnet
       - xenon.eqiad.wmnet
+  discovery-analytics:
+    hosts:
+      - stat1005.eqiad.wmnet
   librenms:
     hosts:
       - netmon1002.wikimedia.org
