--- a/hieradata/role/common/deployment_server.yaml
+++ b/hieradata/role/common/deployment_server.yaml
@@ -145,6 +145,8 @@ scap::sources:
   # Wikimania scholarships app
   scholarships/scholarships:
     repository: wikimedia/wikimania-scholarships
+  wikimedia/discovery/analytics:
+    repository: discovery/analytics
   wdqs/wdqs:
     repository: wikidata/query/deploy
 #    lvs_service: wdqs
