--- a/hieradata/codfw/profile/openstack/labtest.yaml
+++ b/hieradata/codfw/profile/openstack/labtest.yaml
@@ -7,6 +7,7 @@ profile::openstack::labtest::puppetmaster_hostname: 'labtestpuppetmaster2001.wik
 profile::openstack::labtest::nova_api_host: 'labtestnet2001.codfw.wmnet'
 profile::openstack::labtest::labs_hosts_range: '10.192.20.0/24'
 profile::openstack::labtest::horizon_host: 'labtestweb2001.wikimedia.org'
+profile::openstack::labtest::monitoring_host: 'labmon1001.eqiad.wmnet'
 profile::openstack::labtest::spice_hostname: 'labtestspice.wikimedia.org'
 profile::openstack::labtest::nova_network_host: 'labtestnet2001.codfw.wmnet'
 profile::openstack::labtest::rabbit_monitor_user: 'monitoring'
