Assign to wtp1025-wtp1048 the parsoid role
Aside from that, also add them to conftool-data. Disable notifications
for these boxes as well while they are being provisioned

Bug: T165520
Change-Id: Ib78802cc49cf5142c44369d34c5ffd547d6a8fc6

--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -196,6 +196,30 @@ eqiad:
     wtp1022.eqiad.wmnet: [parsoid]
     wtp1023.eqiad.wmnet: [parsoid]
     wtp1024.eqiad.wmnet: [parsoid]
+    wtp1025.eqiad.wmnet: [parsoid]
+    wtp1026.eqiad.wmnet: [parsoid]
+    wtp1027.eqiad.wmnet: [parsoid]
+    wtp1028.eqiad.wmnet: [parsoid]
+    wtp1029.eqiad.wmnet: [parsoid]
+    wtp1030.eqiad.wmnet: [parsoid]
+    wtp1031.eqiad.wmnet: [parsoid]
+    wtp1032.eqiad.wmnet: [parsoid]
+    wtp1033.eqiad.wmnet: [parsoid]
+    wtp1034.eqiad.wmnet: [parsoid]
+    wtp1035.eqiad.wmnet: [parsoid]
+    wtp1036.eqiad.wmnet: [parsoid]
+    wtp1037.eqiad.wmnet: [parsoid]
+    wtp1038.eqiad.wmnet: [parsoid]
+    wtp1039.eqiad.wmnet: [parsoid]
+    wtp1040.eqiad.wmnet: [parsoid]
+    wtp1041.eqiad.wmnet: [parsoid]
+    wtp1042.eqiad.wmnet: [parsoid]
+    wtp1043.eqiad.wmnet: [parsoid]
+    wtp1044.eqiad.wmnet: [parsoid]
+    wtp1045.eqiad.wmnet: [parsoid]
+    wtp1046.eqiad.wmnet: [parsoid]
+    wtp1047.eqiad.wmnet: [parsoid]
+    wtp1048.eqiad.wmnet: [parsoid]
   imagescaler:
     mw1293.eqiad.wmnet: [apache2,nginx]
     mw1294.eqiad.wmnet: [apache2,nginx]
