add tgr to pdfrender-admin sudo group
THIS MUST BE MERGED AFTER OPS MEETING REVIEW.

Please note this is a sudo granting access group, and thus must be
approved in the weekly operations meeting.  The next meeting is
scheduled for 2017-09-15, and this will be listed for approval in that
meeting.

Once approval in the meeting is granted, and all other requirements are
met on the access request task, this can be merged by a member of the
operations team.

Bug: T175882
Change-Id: I21dfd218bd3c4393cd13ee287a555fe4b55b31dc

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -587,7 +587,7 @@ groups:
   pdfrender-admin:
     description: Group of pdfrender admins
     gid: 790
-    members: [gwicke, ppchelko, eevans, mobrovac]
+    members: [gwicke, ppchelko, eevans, mobrovac, tgr]
     privileges: ['ALL = NOPASSWD: /usr/sbin/service pdfrender *',
                  'ALL = (pdfrender) NOPASSWD: ALL']
   trendingedits-admin:
