admin: adding Erika Bjune as an ldap only user
Bug: T175945
Change-Id: I1c93d8931658f0cb54c907de661755a2f5dc6280

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2765,3 +2765,7 @@ ldap_only_users:
     ensure: present
     realname: Dayllan Maza
     email: dmaza@wikimedia.org
+  ebjune:
+    ensure: present
+    realname: Erika Bjune
+    email: ebjune@wikimedia.org
