toollabs: Add shinken check for tools-mail exim queue length
Bug: T96898
Change-Id: Id119f46593308cb28dccdae29fb13ce8635518dc

--- a/modules/nagios_common/files/contactgroups-labs.cfg
+++ b/modules/nagios_common/files/contactgroups-labs.cfg
@@ -1,5 +1,5 @@
 # This file is managed by puppet
-# Add contact 'guest' to all groups so webUI will show the guest accout
+# Add contact 'guest' to all groups so webUI will show the guest account
 # status for services
 define contactgroup {
     contactgroup_name       tools
