toollabs: Add shinken check for tools-mail exim queue length
Bug: T96898
Bug: T175837
Change-Id: Id119f46593308cb28dccdae29fb13ce8635518dc

--- a/modules/toollabs/files/shinken.cfg
+++ b/modules/toollabs/files/shinken.cfg
@@ -20,3 +20,11 @@ define service {
     service_description            High iowait
     use                            generic-service
 }
+
+# Check that the exim queue length is not more than 100 (warn) / 200 (crit) over the last 10 minutes
+define service {
+    service_description         exim queue length
+    host_name                   tools-mail
+    check_command               check_graphite_threshold!https://graphite-labs.wikimedia.org!10!$HOSTNOTES$.$HOSTNAME$.exim.queue.length!600!1000!10min!0min!1!--over
+    use                         generic-service
+}
