toolforge: adjust comment on tools-mail queue check
Bug: T96898
Bug: T175837
Change-Id: I905f307e5fcb335d7470fd82aa56555091a6f6ed

--- a/modules/toollabs/files/shinken.cfg
+++ b/modules/toollabs/files/shinken.cfg
@@ -21,7 +21,7 @@ define service {
     use                            generic-service
 }
 
-# Check that the exim queue length is not more than 100 (warn) / 200 (crit) over the last 10 minutes
+# 'exim -bpc' to see queue length
 define service {
     service_description         exim queue length
     host_name                   tools-mail
