Deploy ocg with scap3
Bug: T129142
Change-Id: I633dd2aad74ee4bbd488e76c201b6540bb5dc2d3
Depends-On: I6ca4630767a1b961215533130b16bf965acc415e

--- a/hieradata/common/scap/dsh.yaml
+++ b/hieradata/common/scap/dsh.yaml
@@ -89,6 +89,11 @@ scap::dsh::groups:
       - logstash1001.eqiad.wmnet
       - logstash1002.eqiad.wmnet
       - logstash1003.eqiad.wmnet
+  ocg:
+    hosts:
+      - ocg1001.eqiad.wmnet
+      - ocg1002.eqiad.wmnet
+      - ocg1003.eqiad.wmnet
   relforge:
     hosts:
       - relforge1001.eqiad.wmnet
